--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <nav>
         <div class="logo"><a href="/html/index.html"><img src="/img/small-logo.png" alt="logo"> </a></div>
         <ul>
-            <li><a href="/html/index.html">HOME</a></li>
-            <li><a href="/html/browse.html">SERVICES</a></li>
-            <li><a href="/html/estimate.html">ESTIMATES</a></li>
-            <li><a href="/html/contact.html">CONTACT</a></li>
-            <li><a href="/html/about.html">ABOUT</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./browse.html">SERVICES</a></li>
+            <li><a href="./estimate.html">ESTIMATES</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
+            <li><a href="./about.html">ABOUT</a></li>
 
         </ul>
     </nav>
