--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav>
-        <div class="logo"><a href="/html/index.html"><img src="/img/small-logo.png" alt="logo"> </a></div>
+        <div class="logo"><a href="./index.html"><img src="./img/small-logo.png" alt="logo"> </a></div>
         <ul>
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./browse.html">SERVICES</a></li>
@@ -30,12 +30,12 @@
         <div class="hero-text">
             <h1 style="font-size:70px">Construction Done Right</h1>
             <p style="font-size: 30px"> All your remodel and repair needs in one place </p>
-            <a href="/html/browse.html"><button> Explore our services </button> </a>
+            <a href="./browse.html"><button> Explore our services </button> </a>
         </div>
     </div>
 
 
-  
+
 
 
 
