--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/about.css" />
+    <link rel="stylesheet" href="./css/about.css" />
     <title>Document</title>
 </head>
 
@@ -12,13 +12,13 @@
 <body>
 
     <nav>
-        <div class="logo"><a href="/html/index.html"><img src="/img/small-logo.png" alt="logo"> </a></div>
+        <div class="logo"><a href="./index.html"><img src="../img/small-logo.png" alt="logo"> </a></div>
         <ul>
-            <li><a href="/html/index.html">HOME</a></li>
-            <li><a href="/html/browse.html">SERVICES</a></li>
-            <li><a href="/html/estimate.html">ESTIMATES</a></li>
-            <li><a href="/html/contact.html">CONTACT</a></li>
-            <li><a href="/html/about.html">ABOUT</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./browse.html">SERVICES</a></li>
+            <li><a href="./estimate.html">ESTIMATES</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
+            <li><a href="./about.html">ABOUT</a></li>
 
         </ul>
     </nav>
@@ -65,9 +65,7 @@
 
     <div class="right-image">
 
-        <img src="/img/valley .jpg" alt="Farming" height="100%;" width="100%;"
-
-    </div>
+        <img src="/img/valley .jpg" alt="Farming" height="100%;" width="100%;" </div>
 
 
 
