--- a/browse.html
+++ b/browse.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/browse.css" />
+    <link rel="stylesheet" href="./css/browse.css" />
     <title>Document</title>
 </head>
 
 <body>
 
     <nav>
-        <div class="logo"><a href="/html/index.html"><img src="/img/small-logo.png" alt="logo"> </a></div>
+        <div class="logo"><a href="./index.html"><img src="../img/small-logo.png" alt="logo"> </a></div>
         <ul>
-            <li><a href="/html/index.html">HOME</a></li>
-            <li><a href="/html/browse.html">SERVICES</a></li>
-            <li><a href="/html/estimate.html">ESTIMATES</a></li>
-            <li><a href="/html/contact.html">CONTACT</a></li>
-            <li><a href="/html/about.html">ABOUT</a></li>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./browse.html">SERVICES</a></li>
+            <li><a href="./estimate.html">ESTIMATES</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
+            <li><a href="./about.html">ABOUT</a></li>
 
         </ul>
     </nav>
