--- a/about.html
+++ b/about.html
@@ -60,12 +60,12 @@
 
     <div class="image">
 
-        <img src="/img/pops.jpeg" alt="Self Portrait" height="100%;" width="100%;">
+        <img src="../img/pops.jpeg" alt="Self Portrait" height="100%;" width="100%;">
     </div>
 
     <div class="right-image">
 
-        <img src="/img/valley .jpg" alt="Farming" height="100%;" width="100%;" </div>
+        <img src="../img/valley .jpg" alt="Farming" height="100%;" width="100%;" </div>
 
 
 
