--- a/browse.html
+++ b/browse.html
@@ -25,7 +25,7 @@
     <div class="container">
 
         <div class="pictures">
-            <img src="/img/kitchen.jpg" alt="KITCHENS" style="width:100%">
+            <img src="../img/kitchen.jpg" alt="KITCHENS" style="width:100%">
             <div class="middle">
                 <div class="text">Kitchens</div>
             </div>
@@ -33,20 +33,20 @@
 
 
             <div class="pictures">
-                <img src="/img/bathroom.jpg" alt="Bathroom" style="width:100%">
+                <img src="../img/bathroom.jpg" alt="Bathroom" style="width:100%">
 
 
             </div>
 
 
             <div class="pictures">
-                <img src="/img/living-room.jpg" alt="Living room" style="width:100%">
+                <img src="../img/living-room.jpg" alt="Living room" style="width:100%">
 
 
             </div>
 
             <div class="pictures">
-                <img src="/img/bedroom.jpg" alt="Bedroom" style="width:100%">
+                <img src="../img/bedroom.jpg" alt="Bedroom" style="width:100%">
 
 
             </div>
