--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav>
-        <div class="logo"><a href="./index.html"><img src="../img/small-logo.png" alt="logo"> </a></div>
+        <div class="logo"><a href="./index.html"><img src="./img/small-logo.png" alt="logo"> </a></div>
         <ul>
             <li><a href="./index.html">HOME</a></li>
             <li><a href="./browse.html">SERVICES</a></li>
@@ -60,12 +60,12 @@
 
     <div class="image">
 
-        <img src="../img/pops.jpeg" alt="Self Portrait" height="100%;" width="100%;">
+        <img src="./img/pops.jpeg" alt="Self Portrait" height="100%;" width="100%;">
     </div>
 
     <div class="right-image">
 
-        <img src="../img/valley .jpg" alt="Farming" height="100%;" width="100%;" </div>
+        <img src="./img/valley .jpg" alt="Farming" height="100%;" width="100%;" </div>
 
 
 
