--- a/index.html
+++ b/index.html
@@ -2,37 +2,73 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css" />
+  <script src="https://kit.fontawesome.com/b242f39b36.js" crossorigin="anonymous"></script>
+  <title>Document</title>
+
+
 
 </head>
 
 <body>
 
-    <nav>
-        <div class="logo"><a href="./index.html"><img src="../img/small-logo.png" alt="logo"> </a></div>
-        <ul>
-            <li><a href="./index.html">HOME</a></li>
-            <li><a href="./browse.html">SERVICES</a></li>
-            <li><a href="./estimate.html">ESTIMATES</a></li>
-            <li><a href="./contact.html">CONTACT</a></li>
-            <li><a href="./about.html">ABOUT</a></li>
+  <nav>
+    <div class="logo"><a href="./index.html"><img src="../img/small-logo.png" alt="logo"> </a></div>
+    <ul>
+      <li><a href="./index.html">HOME</a></li>
+      <li><a href="./browse.html">SERVICES</a></li>
+      <li><a href="./estimate.html">ESTIMATES</a></li>
+      <li><a href="./contact.html">CONTACT</a></li>
+      <li><a href="./about.html">ABOUT</a></li>
 
-        </ul>
-    </nav>
+    </ul>
+  </nav>
 
-    <div class="hero-image">
-        <div class="hero-text">
-            <h1 style="font-size:70px">Construction Done Right</h1>
-            <p style="font-size: 30px"> All your remodel and repair needs in one place </p>
-            <a href="./browse.html"><button> Explore our services </button> </a>
-        </div>
+
+
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1 style="font-size:70px">Construction Done Right</h1>
+      <p style="font-size: 30px"> All your remodel and repair needs in one place </p>
+      <a href="./browse.html"><button> Explore our services </button> </a>
     </div>
+  </div>
+
+
+  <div class="free-estimate">
+    <div class="free-text">
+      <h1>© KA Construction Company </h1>
+
+
+
+
+
+    </div>
+
+  </div>
+
+  <div class="icons">
+
+    <i class="fab fa-instagram"></i>
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-yelp"></i>
+
+
+
+
+  </div>
+
+
+  </div>
+
+
+
+
+
 
 
 
