--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             <input class="input" type="text" id="lname" name="lname"><br> <br>
             <label for="contact">Reason for Contact</label>
             <input class="input" type="text" id="fname" name="fname"><br> <br>
-            <input type="submit" value="Submit">
+            <input class="submit" type="submit" value="Submit">
 
         </form>
     </div>
