--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <nav>
-    <div class="logo"><a href="./index.html"><img src="../img/small-logo.png" alt="logo"> </a></div>
+    <div class="logo"><a href="./index.html"><img src="./img/small-logo.png" alt="logo"> </a></div>
     <ul>
       <li><a href="./index.html">HOME</a></li>
       <li><a href="./browse.html">SERVICES</a></li>
