--- a/browse.html
+++ b/browse.html
@@ -24,7 +24,7 @@
 
 
 
-    <div class="box" style="background-image: url('/img/kitchen.jpg');">
+    <div class="box" style="background-image: url('./img/kitchen.jpg');">
 
         <h1 class="kitchen-text">Kitchens</h1>
         <div class="opacity">
