--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <i class="fab fa-instagram"></i>
     <i class="fab fa-twitter"></i>
-    <i class="fab fa-yelp"></i>
+    <i class="fab fa-pinterest-p"></i>
 
 
 
