--- a/browse.html
+++ b/browse.html
@@ -24,13 +24,33 @@
 
 
 
-    <div class="box" style="background-image: url('./img/kitchen.jpg');">
+    <div class="kit-box" style="background-image: url('./img/kitchen.jpg');">
 
         <h1 class="kitchen-text">Kitchens</h1>
-        <div class="opacity">
+        <div class="kit-opacity">
+            <p>x </p>
+        </div>
+    </div>
+
+    <div class="liv-box" style="background-image: url(./img/lux-living.jpg);">
+        <h1 class="living-text">Livingrooms</h1>
+        <div class="liv-opacity">
             <p>x</p>
         </div>
+    </div>
 
+    <div class="bed-box" style="background-image: url(./img/lux-bed.jpg);">
+        <h1 class="bed-text">Bedrooms</h1>
+        <div class="bed-opacity">
+            <p>x</p>
+        </div>
+    </div>
+
+    <div class="bath-box" style="background-image: url(./img/lux-bathroom.jpg);">
+        <h1 class="bath-text">Bathrooms</h1>
+        <div class="bath-opacity">
+            <p>x</p>
+        </div>
 
 
     </div>
