--- a/estimate.html
+++ b/estimate.html
@@ -25,7 +25,7 @@
 
     <div class="estimates">
         <div class="text">
-            <h1>Estimates Are Free</h1>
+            <h1>Estimates <br>Are Free</h1>
         </div>
     </div>
     <div class="calender">
